--- a/task-one-portfolio/src/index.css
+++ b/task-one-portfolio/src/index.css
@@ -65,6 +65,10 @@ nav {
     height: 100%;
 }
 
+li {
+    cursor: pointer;
+}
+
 .social-link {
     border: 1px solid #134B70;
 }
@@ -108,3 +112,72 @@ nav {
 }
 
 /* #508C9B */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* WebKit Browsers */
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 6px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 6px;
+  }
+  
+  /* Firefox */
+  html {
+    scrollbar-width: thin;
+    scrollbar-color: #280638 #f1f1f1;
+  }
+
+
+
+
+
+
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 6px;
+    border: 2px solid #fff; 
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 6px;
+    box-shadow: inset 0 0 5px grey; 
+  }
+  
+  
