--- a/task-two-portfolio/style.css
+++ b/task-two-portfolio/style.css
@@ -9,7 +9,7 @@ body {
 
 
 h1 {
-    font-size: 4rem;
+    font-size: 5rem;
 }
 
 h3 {
@@ -44,6 +44,7 @@ h3 {
     background-repeat: no-repeat;
     background-position: center top;
     display: grid;
+    margin-top: 15rem;
     grid-template-columns: repeat(2, 1fr);
 }
 
