--- a/task-two-portfolio/style.css
+++ b/task-two-portfolio/style.css
@@ -28,10 +28,6 @@ h3 {
     width: 50%;
 }
 
-.hero-left p {
-    /* font-size: 1rem; */
-}
-
 .hero-left h1 {
     padding-top: 3rem;
     padding-bottom: 4rem;
@@ -52,7 +48,7 @@ h3 {
     gap: 4rem;
     align-items: center;
     margin-top: 15rem;
-    width: 1110px;
+    width: 80%;
     padding-inline: 30px;
     border-radius: 15px;
 }
@@ -67,12 +63,12 @@ h3 {
 .premium {
     background-color: #fa7453;
     border-radius: 10px;
-    padding: 45px;
+    padding: 30px;
     color: white;    
     width: 400px;;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 4rem;
     margin-top: 12rem;
 }
 
@@ -80,7 +76,7 @@ h3 {
     font-size: 18px;
     line-height: 25px;
     letter-spacing: 0.5px;
-    margin-left: 25px;
+    /* margin-left: 25px; */
 }
 
 .premium p span {
@@ -109,6 +105,8 @@ button img {
 }
 
 button:not(:last-child) {
+    background-color: #191826;
+    color: white;
     margin-bottom: 25px;
 }
 
@@ -121,15 +119,74 @@ button:not(:last-child) {
     background-color: #ffb964;
 }
 
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10rem;
+    padding: 3rem;
+    padding-block: 5rem;
+}
+
+.footer-container {
+    width: 70%;
+    display: flex;
+    /* align-items: stretch; */
+    justify-content: space-between;
+}
+
+footer .contact {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 70%;
+}
+
+.complaints {
+    width: 50%;
+    line-height: 25px;
+}
+
+footer h3, a {
+    color: #191826;
+    text-decoration: none;
+}
+
+.icons {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
 @media (max-width: 1150px) {
     .cta {
-        gap: 0px;
-        margin: auto;
+        gap: 10px;
+        padding: 10px;
+        margin: 6rem;
         max-width: 1110px;
     }
     .premium {
+        gap: 15px;
+        padding: 10px;
         margin: 0;
-        transform: translate(-45px, 200px);
+    }
+    .premium p {
+        margin: 0;
+        text-align: center;
+    }
+    .mobile-phone img {
+        margin: 0;
+    }
+    .footer-container {
+        width: 100%;
+        flex-direction: column;
+        gap: 3rem;
+    }
+    footer .contact {
+        width: 100%;
+    }
+    .complaints {
+        width: auto;
     }
 }
 
@@ -141,19 +198,71 @@ button:not(:last-child) {
     .first-section img {
         display: none;
     }
-    
     .first-section {
         padding-inline: 2rem;
     }
     h1 {
         font-size: 3rem;
     }
+    .cta {
+        margin: 6rem auto;
+        flex-direction: column;
+        gap: 0;
+    }
+    .premium {
+        width: 100%;
+    }
+    .mobile-phone img {
+        margin-top: 10rem;
+    }
 }
 
 
 @media (max-width: 615px) {
+    footer {
+        margin-top: 12rem;
+        padding-inline: 15px;
+    }
     .premium {
         flex-direction: column;
-        margin-top: 330px;
+        /* margin-top: 330px; */
+    }
+    .contact {
+        flex-direction: column;
+        align-items: start;
+        gap: 2rem;
+    }
+    .contact .icons {
+        align-self: flex-start;
+    }
+    .complaints {
+        width: 100%;
+    }
+}
+
+@media (max-width: 350px) {
+    h1 {
+        font-size: 2rem;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+    .mobile-phone {
+        width: 100%;
+    }
+    .mobile-phone img {
+        margin-top: 15rem;
+        width: 100%;
+    }
+}
+
+@media (max-width:  230px) {
+    h1 {
+        font-size: 25px;
+    }
+    h3 {
+        font-size: 20px;
+    }
+    .hero-left p {
+        font-size: 14px;
     }
 }
