--- a/task-two-portfolio/style.css
+++ b/task-two-portfolio/style.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap");
 * {
     padding: 0;
     margin: 0;
 }
 
 body {
-    /* background-color: red; */
+    font-family: IBM Plex Sans, sans-serif;
 }
 
 
